argocd-image-updater/namespaced/upstream/apps.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: argocd-image-updater
    control-plane: argocd-image-updater-controller
  name: argocd-image-updater-controller-metrics-service
spec:
  ports:
    - name: https
      port: 8443
      protocol: TCP
      targetPort: 8443
  selector:
    control-plane: argocd-image-updater-controller
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: argocd-image-updater-controller
    control-plane: argocd-image-updater-controller
  name: argocd-image-updater-controller
spec:
  replicas: 1
  selector:
    matchLabels:
      control-plane: argocd-image-updater-controller
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/default-container: argocd-image-updater-controller
      labels:
        app.kubernetes.io/name: argocd-image-updater
        control-plane: argocd-image-updater-controller
    spec:
      containers:
        - args:
            - --metrics-bind-address=:8443
            - run
          image: quay.io/argoprojlabs/argocd-image-updater:v1.2.2
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8081
            initialDelaySeconds: 15
            periodSeconds: 20
          name: argocd-image-updater-controller
          readinessProbe:
            httpGet:
              path: /readyz
              port: 8081
            initialDelaySeconds: 5
            periodSeconds: 10
          resources:
            limits:
              cpu: 500m
              memory: 1024Mi
            requests:
              cpu: 250m
              memory: 512Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
          volumeMounts:
            - mountPath: /app/config
              name: image-updater-conf
            - mountPath: /app/config/ssh
              name: ssh-known-hosts
            - mountPath: /app/.ssh
              name: ssh-config
            - mountPath: /tmp
              name: tmp
            - mountPath: /app/ssh-keys/id_rsa
              name: ssh-signing-key
              readOnly: true
              subPath: sshPrivateKey
            - mountPath: /app/config/tls
              name: argocd-image-updater-tls
              readOnly: true
      securityContext:
        runAsNonRoot: true
      serviceAccountName: argocd-image-updater-controller
      terminationGracePeriodSeconds: 10
      volumes:
        - configMap:
            items:
              - key: registries.conf
                path: registries.conf
              - key: git.commit-message-template
                path: commit.template
            name: argocd-image-updater-config
            optional: true
          name: image-updater-conf
        - configMap:
            name: argocd-ssh-known-hosts-cm
            optional: true
          name: ssh-known-hosts
        - configMap:
            name: argocd-image-updater-ssh-config
            optional: true
          name: ssh-config
        - name: ssh-signing-key
          secret:
            optional: true
            secretName: ssh-git-creds
        - name: argocd-image-updater-tls
          secret:
            items:
              - key: tls.crt
                path: tls.crt
              - key: tls.key
                path: tls.key
            optional: true
            secretName: argocd-image-updater-tls
        - emptyDir: {}
          name: tmp
