argocd-image-updater/namespaced/upstream/netpols.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: argocd-image-updater-controller
    control-plane: argocd-image-updater-controller
  name: allow-metrics-traffic
spec:
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              metrics: enabled
      ports:
        - port: 8443
          protocol: TCP
  podSelector:
    matchLabels:
      control-plane: argocd-image-updater-controller
  policyTypes:
    - Ingress
